--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/user-event": "^12.2.2",
+    "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -12,6 +13,8 @@
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
