--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/user-event": "^12.2.2",
+    "i18next": "^20.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
