chore: added cypress tests + netlify config

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+
+### CypressIO ###
+# gitignore template for the CypressIO, browser test framework
+# website: https://www.cypress.io/
+
+cypress/results/*
+cypress/reports/*
+cypress/screenshots/*
+cypress/videos/*
