--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "react-i18next": "^11.8.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -43,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^11.1.2"
+    "@testing-library/react": "^11.1.2",
+    "cypress": "^6.8.0",
+    "netlify-plugin-cypress": "^2.2.0"
   }
 }
